<resources>
    <string name="app_name">GSM</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">SGM Tracker</string>
    <string name="nav_header_subtitle">info@sgmtracker.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_immense">Immense Mode</string>
    <string name="menu_slighting">Slighting Mode</string>
    <string name="menu_help">Help</string>
    <string name="immense_logo">immense logo</string>
    <string name="immense_mode">Immense Mode</string>
    <string name="to_scan_larger_area">To scan larger area</string>
    <string name="to_scan_small_area">To scan small area</string>
    <string name="quick_access_title">Quick Access</string>
    <string name="immense_mode_image">Immense mode image</string>
    <string name="dbm">dBm</string>
    <string name="save">Save</string>
    <string name="FAQ">FAQ</string>
    <string name="tracking_setting">Tracking Setting</string>
    <string name="title">Title</string>
    <string name="time_brake_of_tracking">Time brake of tracking : </string>
    <string name="second">Second</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="records">RECORDS</string>
    <string name="quick_access_immense_card">quick access immense card</string>
    <string name="see_more">See More</string>
    <string name="quick_access_immense_card_001_clock">quick_access_immense_card_001_clock</string>
    <string name="quick_access_immense_card_001_calender">quick_access_immense_card_001_calender</string>
    <string name="title_activity_maps_immense">Immense Mode</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_immense">ImmenseFragment</string>
    <string name="title_activity_immense_result">Immense_result</string>


</resources>