<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/dashboard"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_immense"
            android:icon="@drawable/baseline_map_24"
            android:title="@string/menu_immense" />
        <item
            android:id="@+id/nav_slighting"
            android:icon="@drawable/small_area"
            android:title="@string/menu_slighting" />

        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/menu_help" />
    </group>
</menu>