<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.ousl.gsm.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_immense"
        android:name="com.ousl.gsm.ui.immense.ImmenseFragment"
        android:label="@string/menu_immense"
        tools:layout="@layout/fragment_immense" />

    <fragment
        android:id="@+id/nav_help"
        android:name="com.ousl.gsm.ui.help.HelpFragment"
        android:label="@string/menu_help"
        tools:layout="@layout/fragment_help" />
    <fragment
        android:id="@+id/nav_slighting"
        android:name="com.ousl.gsm.ui.slighting.SlightingFragment"
        android:label="@string/menu_slighting"
        tools:layout="@layout/fragment_slighting" />
</navigation>