<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/immenseContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="5dp"
    android:background="#EFEFEF"
    tools:context=".ui.immense.ImmenseFragment">

    <!--Top section-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_marginHorizontal="5dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/tracking_setting"
            android:textColor="#000"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="383dp"
            android:layout_height="269dp"
            android:layout_marginHorizontal="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.965"
            android:layout_marginBottom="10dp"
            android:elevation="5dp"
            android:background="@drawable/bg_rounded"
            tools:ignore="TextSizeCheck">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="343dp"
                android:layout_height="60dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.16000003">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#E9FFD4"
                    android:hint="@string/title"
                    android:textColorHint="#5D03FF" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/time_brake_of_tracking_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_brake_of_tracking"
                android:textColor="#000"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/second_for_track"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/textInputLayout2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.533" />

            <EditText
                android:id="@+id/second_for_track"
                android:layout_width="59dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="112dp"
                android:autofillHints=""
                android:ems="30"
                android:inputType="numberSigned"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/how_many_second"
                tools:ignore="LabelFor,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/how_many_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="92dp"
                android:layout_marginBottom="116dp"
                android:text="@string/second"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/start_tracking_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/start_tracking"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="#FF825A"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Buttom section-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        android:layout_marginHorizontal="5dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="1"
        android:elevation="5dp"
        android:background="@drawable/bg_rounded"
        android:orientation="vertical">

        <TextView
            android:id="@+id/quick_access_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/records"
            android:textSize="20sp"
            android:textColor="#000"
            android:textStyle="bold"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="2dp"
            >

            <ListView
                android:id="@+id/immense_list_view"
                android:layout_width="match_parent"
                android:layout_height="352dp" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>