<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment"
    android:background="#fff"
    android:paddingTop="8dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="267dp"
            android:layout_height="345dp"
            android:src="@drawable/tower"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    Immense Card -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_immense"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="8dp"
        android:layout_weight="1"
        android:elevation="5dp"
        android:background="@drawable/bg_rounded"
        android:backgroundTint="#393939">

        <ImageView
            android:id="@+id/immense_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/immense_mode_image"
            android:src="@drawable/baseline_map_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/immense_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/immense_mode"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/immense_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.406" />

        <TextView
            android:id="@+id/immense_title_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_scan_larger_area"
            android:textColor="#FFFFFF"
            app:layout_constraintStart_toStartOf="@+id/immense_title"
            app:layout_constraintTop_toBottomOf="@+id/immense_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Slighting Card -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/card_sligting"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:layout_marginHorizontal="8dp"
        android:elevation="5dp"
        android:layout_weight="1"
        android:backgroundTint="#FFC107"
        android:background="@drawable/bg_rounded"
        android:layout_marginVertical="10dp">

        <ImageView
            android:id="@+id/sligting_logo"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:contentDescription="@string/immense_mode_image"
            android:src="@drawable/blue_home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.17"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/sligtiong_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/menu_slighting"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/sligting_logo"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.41000003" />

        <TextView
            android:id="@+id/sligtiong_title_discription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/to_scan_small_area"
            app:layout_constraintStart_toStartOf="@+id/sligtiong_title"
            app:layout_constraintTop_toBottomOf="@+id/sligtiong_title" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>